Closed
Bug 1060736
Opened 11 years ago
Closed 11 years ago
H.264 videos (youtube, etc) play as black with sound on Lenovo W520 (OMTC issue)
Categories
(Core :: Graphics, defect)
Tracking
()
RESOLVED
FIXED
mozilla35
People
(Reporter: jesup, Assigned: bas.schouten)
References
Details
(Keywords: regression)
Attachments
(2 files)
|
1.05 KB,
text/plain
|
Details | |
|
1.76 KB,
patch
|
nical
:
review+
Sylvestre
:
approval-mozilla-aurora+
Sylvestre
:
approval-mozilla-beta+
|
Details | Diff | Splinter Review |
On Youtube, and also other sites like http://haignet.co.uk/html5-video-element-test.htm, h.264 videos render as black-with-sound unless I disable media.windows-media-foundation.use-dxva (or media.windows-media-foundation.enabled).
This happens on Nightly/34 and Aurora/33; it does not happen on Beta/32.
I see this on a Lenovo W520 Win7 with older intel drivers (which are blacklisted for direct2d I believe - see mattwoodrow). Perhaps that was uplifted to Aurora?
However, I also see this on a Win8.1 desktop with an Nvidia 760GT card with I'd presume recent drivers (modulo it's an old card).
I also see black video on Linux m-c, but that may very well be a red herring or different issue.
Comment 1•11 years ago
|
||
(In reply to Randell Jesup [:jesup] from comment #0)
> I see this on a Lenovo W520 Win7 with older intel drivers (which are
> blacklisted for direct2d I believe - see mattwoodrow). Perhaps that was
> uplifted to Aurora?
If it's bug 1018278, that is on aurora.
Comment 2•11 years ago
|
||
Can you check the graphics section of about:support on the machines that this works on/doesn't work on. Maybe DXVA is broken when we don't have direct2d enabled?
Comment 3•11 years ago
|
||
I am having the same experience on OS X, and it has previously been reported for Linux (bug #1056343) as well as Windows (bug #1057695). There are similar reports on mobile (see comments in bug #1044063).
| Reporter | ||
Comment 4•11 years ago
|
||
I am seeing similar problems on Linux Nightly. I haven't tried to find a workaround
| Reporter | ||
Comment 5•11 years ago
|
||
Note that my linux runs are not e10s... (nor windows)
Comment 6•11 years ago
|
||
(In reply to Randell Jesup [:jesup] from comment #0)
> On Youtube, and also other sites like
> http://haignet.co.uk/html5-video-element-test.htm, h.264 videos render as
> black-with-sound unless I disable media.windows-media-foundation.use-dxva
> (or media.windows-media-foundation.enabled).
>
> This happens on Nightly/34 and Aurora/33; it does not happen on Beta/32.
If you can find the time, it would be very helpful if you could narrow down the regression range and figure out exactly which Nightly build it regressed in.
Flags: needinfo?(rjesup)
Comment 7•11 years ago
|
||
I just recently discovered this may be rooted in a conflict with Flashblock: http://forums.mozillazine.org/viewtopic.php?f=23&t=2862257. At least, installing the updated version of Flashblock (linked from the comments on that post) in my copy of Nightly resolved the problem.
| Reporter | ||
Comment 8•11 years ago
|
||
(In reply to Eric A. Meyer from comment #7)
> I just recently discovered this may be rooted in a conflict with Flashblock:
> http://forums.mozillazine.org/viewtopic.php?f=23&t=2862257. At least,
> installing the updated version of Flashblock (linked from the comments on
> that post) in my copy of Nightly resolved the problem.
This is not caused by that problem: I disabled flashblock, restarted, undid the config value, and had the same problem. Also note that my issues were playing HTML5 videos (youtube or elsewhere).
Flags: needinfo?(rjesup)
| Reporter | ||
Comment 9•11 years ago
|
||
the dxva hack (or foundation) no longer work, on any of nightly, aurora, or beta on my W520 win7 machine
status-firefox33:
--- → affected
status-firefox34:
--- → affected
status-firefox35:
--- → affected
Hardware: x86_64 → x86
Summary: H.264 videos (youtube, etc) play as black with sound unless I turn off dxva (or wmf support entirely) → H.264 videos (youtube, etc) play as black with sound (optimus?) on Lenovo W520
Updated•11 years ago
|
Keywords: regressionwindow-wanted
Comment 10•11 years ago
|
||
Could this be related to bug 1063048 and its duplicate bug 1062452? It was an Intel blacklist change that recently hit all the branches for the 32 chemspill.
| Reporter | ||
Comment 11•11 years ago
|
||
disabling dxva stopped working as a workaround on the 8/27 nightly build
| Reporter | ||
Comment 12•11 years ago
|
||
Regression range for the main failure is 5/20 to 5/21 nightly (5/20 works, 5/21 works only with dxva disabled)
Comment 13•11 years ago
|
||
Range is http://hg.mozilla.org/mozilla-central/pushloghtml?fromchange=cb9f34f73ebe&tochange=9d8d16695f6a
And it contains " 718a9852b60d Bas Schouten — Bug 899785: Switch on OMTC and async video on windows. r=BenWa"
I bet that's it. Try disabling OMTC to confirm?
Comment 14•11 years ago
|
||
jesup: Can you test with OMTC disabled, and if the bug goes away with OMTC disabled, we should assign this to Bas or someone in GFX to fix.
Flags: needinfo?(rjesup)
| Reporter | ||
Comment 15•11 years ago
|
||
OMTC disabled makes no difference (in any build)
Flags: needinfo?(rjesup)
| Reporter | ||
Comment 16•11 years ago
|
||
Correction: turning off OMTC does make it work - but you need to quit and restart
| Reporter | ||
Comment 17•11 years ago
|
||
Ok, since it's clearly OMTC -> Bas
Assignee: nobody → bas
Component: Video/Audio → Graphics
Summary: H.264 videos (youtube, etc) play as black with sound (optimus?) on Lenovo W520 → H.264 videos (youtube, etc) play as black with sound on Lenovo W520 (OMTC issue)
| Reporter | ||
Updated•11 years ago
|
Keywords: regressionwindow-wanted
Comment 18•11 years ago
|
||
Blacklisting should take care of this for 33,34, do we need to also worry about if this is pointing to a real problem?
| Assignee | ||
Comment 19•11 years ago
|
||
Attachment #8496888 -
Flags: review?(nical.bugzilla)
Updated•11 years ago
|
Attachment #8496888 -
Flags: review?(nical.bugzilla) → review+
Status: NEW → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla35
Comment 21•11 years ago
|
||
Bas, Nical, can one of you fill the uplift request? We need that in 33. Thanks!
Comment 22•11 years ago
|
||
Comment on attachment 8496888 [details] [diff] [review]
Disable all acceleration on older drivers for HD 3000
Approval Request Comment
[Feature/regressing bug #]:
[User impact if declined]: video rendering issues.
[Describe test coverage new/current, TBPL]:
[Risks and why]: none, driver blocklisting patch.
[String/UUID change made/needed]:
Attachment #8496888 -
Flags: approval-mozilla-beta?
Attachment #8496888 -
Flags: approval-mozilla-aurora?
Flags: needinfo?(nical.bugzilla)
Updated•11 years ago
|
Attachment #8496888 -
Flags: approval-mozilla-beta?
Attachment #8496888 -
Flags: approval-mozilla-beta+
Attachment #8496888 -
Flags: approval-mozilla-aurora?
Attachment #8496888 -
Flags: approval-mozilla-aurora+
Comment 23•11 years ago
|
||
Comment 24•11 years ago
|
||
I cannot reproduce this issue on Windows 7 with Nightly 2014-08-29 nor Nightly 2014-09-23.
Jesup, could you please take a look on your machine at latest 33.0b, 34.0a2 and 35.0a1 to verify this fix? Thanks in advance.
Flags: needinfo?(rjesup)
| Reporter | ||
Updated•5 years ago
|
Flags: needinfo?(rjesup)
You need to log in
before you can comment on or make changes to this bug.
Description
•