Bug 1060736 - Disable all acceleration on HD 3000 for driver versions 2321 or lower. r=nical, a=sledru